# indicator_bins

./: .clang-format  .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Display_v2.ioc  README.md  bins Debug.launch  bins Release.launch  cat.sh  compile_pc.sh  compile_stm32.sh  indicator_bins.launch  structure.txt
App/: CBuf.h  CMakeLists.txt  W9864G6KH.c  app.cpp  app.h  can_messages.h  disp_bright_hal.h  rs422_port.h
Core/Inc/: i2c.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Core/Src/: fdcan.c  fmc.c  gpio.c  i2c.c  ltdc.c  main.c  spi.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c  usart.c
GUI/: CMakeLists.txt  gui.c  gui.h
app/: CMakeLists.txt  app.cpp  app.h  app_common.cpp  app_pc.cpp  pres2alt.h
app/common/: RotaryEncoder.cpp  RotaryEncoder.h  air_signals.cpp  air_signals.h  app.h  app_common.cpp  app_context.h  app_cpp.h  build_time.h  can_stub_pc.h  can_types.h  disp_bright.h  display_config.h  input_hal.h  pres2alt.cpp  pres2alt.h  rotary_encoder.cpp  rotary_encoder.h  rs422_port.h
app/pc/: CMakeLists.txt  app_pc.cpp  app_pc_stubs.cpp  can_sim.cpp  disp_bright.c  encoder_sim.cpp  encoder_sim.h  lv_port.h  lv_port_pc.c  lv_port_pc.h  main_pc.cpp  pc_input_hal.cpp
app/stm32/: W9864G6KH.c  W9864G6KH.h  app_stm32.cpp  can_port.cpp  can_port.h  disp_bright_hal.c  disp_bright_hal.h  input_hal.c  input_hal.h  rs422_port.cpp  rs422_port.h
cmake/: stm32_toolchain.cmake
cmake/docs/: Структура проекта прошивки БИНС-LVGL.txt
docs/: bins.ioc  npx lv_font_conv.sh
gui/: CMakeLists.txt  gui.c  gui.h
hex/: Display_v2.hex  Display_v2_CAN_timeouts_x10.hex  bins.hex
lvgl/: CMakeLists.txt  lv_conf.h  lv_port.c
lvgl/src/draw/: lv_draw_img.c
lvgl/src/draw/renesas/: lv_gpu_d2_draw_label.c
lvgl/src/draw/sw/: lv_draw_sw_blend.c
lvgl/src/extra/widgets/imgbtn/: lv_imgbtn.c
lvgl/src/hal/: lv_hal_disp.c
platform/pc/: CMakeLists.txt  app_pc_stubs.cpp  display_config.h  lv_port.h  lv_port_pc.c  main.h  main_pc.cpp
platform/stm32/: CMakeLists.txt  RotaryEncoder.h  can_port.cpp  can_port.h  lv_port.h  lv_port_stm32.c  rs422_port.cpp
