#file(GLOB APP_SRC
#    *.cpp
#    *.c
#)

#
#file(GLOB APP_SRC
#    ${CMAKE_SOURCE_DIR}/App/app.cpp
#    ${CMAKE_SOURCE_DIR}/App/can_port.cpp
#    ${CMAKE_SOURCE_DIR}/App/rs422_port.cpp
#)
#
#add_library(app STATIC ${APP_SRC})
#add_library(app STATIC ${APP_SRC})
#
#target_include_directories(app PUBLIC
#    ${CMAKE_CURRENT_SOURCE_DIR}
#)
